--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ padding: 0;
 
 body{
 background-color: var(--cor-de-fundo);
-color: var(--cor-primaria);
+color: var(--cor-secundaria);
 height: 100vh;
 font-family: var(--fonte);
 
@@ -50,4 +50,18 @@ nav a:hover{
 text-decoration: underline;
 transform: scale(1.3);
 transition: transform 2s;
+}
+
+ span{
+   color: var(--cor-de-aba);
+   font-weight: bold;
+}
+.graficos-container{
+    margin: 5rem;
+}
+.graficos-texto{
+    font-size: 1.3rem;
+    text-align: center;
+    padding: 2rem;
+    border: var(--cor-secundaria) solid 2px;
 }
