--- a/style.css
+++ b/style.css
@@ -46,6 +46,13 @@ margin: 0 2rem 1rem 0;
 font-size: 1.7rem;
 }
 
+footer{
+text-align: center;
+background-color: var(--cor-de-aba);
+color: var(--cor-de-fundo);
+}
+
+
 nav a:hover{
 text-decoration: underline;
 transform: scale(1.3);
